// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 disabled 1`] = `
.c5:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c0 {
  position: relative;
  box-sizing: border-box;
  cursor: not-allowed;
  padding: 4px 0;
}

.c4 {
  position: absolute;
  cursor: not-allowed;
  border-radius: 999rem;
  background-color: rgba(221,221,221,1);
  z-index: 1;
  height: 100%;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: not-allowed;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(221,221,221,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
  className="c0"
>
  <div
    className="c1 c2 muya-slider-track"
    onClick={[Function]}
  >
    <div
      className="c3 muya-slider-start-circle"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
    />
    <div
      className="c3 muya-slider-end-circle"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
    />
    <div
      className="c4 muya-slider-range"
      style={
        Object {
          "left": "0%",
        }
      }
    />
  </div>
</div>
`;

exports[`测试普通渲染 1`] = `
Array [
  .c0 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  padding: 4px 0;
}

.c0:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c4 {
  position: absolute;
  cursor: pointer;
  border-radius: 999rem;
  background-color: rgba(26,122,248,1);
  z-index: 1;
  height: 100%;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: pointer;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(26,122,248,1);
}

.c3:hover {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 16px;
  height: 16px;
  box-shadow: none;
}

.c3:hover::before {
  border-color: rgba(26,122,248,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
    className="c0"
  >
    <div
      className="c1 c2 muya-slider-track"
      onClick={[Function]}
    >
      <div
        className="c3 muya-slider-start-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c3 muya-slider-end-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c4 muya-slider-range"
        style={
          Object {
            "left": "0%",
          }
        }
      />
    </div>
  </div>,
  .c0 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  padding: 4px 0;
}

.c0:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c4 {
  position: absolute;
  cursor: pointer;
  border-radius: 999rem;
  background-color: rgba(26,122,248,1);
  z-index: 1;
  height: 100%;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: pointer;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(26,122,248,1);
}

.c3:hover {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 16px;
  height: 16px;
  box-shadow: none;
}

.c3:hover::before {
  border-color: rgba(26,122,248,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
    className="c0"
  >
    <div
      className="c1 c2 muya-slider-track"
      onClick={[Function]}
    >
      <div
        className="c3 muya-slider-start-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c3 muya-slider-end-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c4 muya-slider-range"
        style={
          Object {
            "left": "0%",
          }
        }
      />
    </div>
  </div>,
  .c0 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  padding: 4px 0;
}

.c0:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c4 {
  position: absolute;
  cursor: pointer;
  border-radius: 999rem;
  background-color: rgba(26,122,248,1);
  z-index: 1;
  height: 100%;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: pointer;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(26,122,248,1);
}

.c3:hover {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 16px;
  height: 16px;
  box-shadow: none;
}

.c3:hover::before {
  border-color: rgba(26,122,248,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
    className="c0"
  >
    <div
      className="c1 c2 muya-slider-track"
      onClick={[Function]}
    >
      <div
        aria-describedby={null}
        className="c3 muya-slider-start-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        aria-describedby={null}
        className="c3 muya-slider-end-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c4 muya-slider-range"
        style={
          Object {
            "left": "0%",
          }
        }
      />
    </div>
  </div>,
  .c8 {
  color: rgba(102,102,102,1);
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  margin: 0;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  padding: 4px 0;
}

.c0:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c5 {
  position: absolute;
  cursor: pointer;
  border-radius: 999rem;
  background-color: rgba(26,122,248,1);
  z-index: 1;
  height: 100%;
}

.c4 {
  position: absolute;
  box-sizing: border-box;
  cursor: pointer;
  z-index: 2;
  height: 12px;
  width: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c4::before {
  content: '';
  display: block;
  box-sizing: border-box;
  height: 6px;
  width: 6px;
  border: 1px solid rgba(221,221,221,1);
  border-radius: 999rem;
  background-color: rgba(255,255,255,1);
}

.c6 {
  position: relative;
  width: 100%;
  margin-top: 8px;
  height: 20px;
}

.c7 {
  position: absolute;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  cursor: pointer;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  top: 0;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: pointer;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(26,122,248,1);
}

.c3:hover {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 16px;
  height: 16px;
  box-shadow: none;
}

.c3:hover::before {
  border-color: rgba(26,122,248,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
    className="c0"
  >
    <div
      className="c1 c2 muya-slider-track"
      onClick={[Function]}
    >
      <div
        className="c3 muya-slider-start-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c3 muya-slider-end-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c4 muya-slider-mark-point"
        onClick={[Function]}
        style={
          Object {
            "left": "10%",
          }
        }
      />
      <div
        className="c5 muya-slider-range"
        style={
          Object {
            "left": "0%",
          }
        }
      />
    </div>
    <div
      className="c6"
    >
      <div
        className="c7 muya-slider-mark-label"
        onClick={[Function]}
        style={
          Object {
            "left": "10%",
          }
        }
      >
        <span
          className="c8"
        >
          sss
        </span>
      </div>
    </div>
  </div>,
  .c8 {
  color: rgba(102,102,102,1);
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  margin: 0;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  padding: 4px 0;
}

.c0:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c5 {
  position: absolute;
  cursor: pointer;
  border-radius: 999rem;
  background-color: rgba(26,122,248,1);
  z-index: 1;
  height: 100%;
}

.c4 {
  position: absolute;
  box-sizing: border-box;
  cursor: pointer;
  z-index: 2;
  height: 12px;
  width: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c4::before {
  content: '';
  display: block;
  box-sizing: border-box;
  height: 6px;
  width: 6px;
  border: 1px solid rgba(221,221,221,1);
  border-radius: 999rem;
  background-color: rgba(255,255,255,1);
}

.c6 {
  position: relative;
  width: 100%;
  margin-top: 8px;
  height: 20px;
}

.c7 {
  position: absolute;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  cursor: pointer;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  top: 0;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: pointer;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(26,122,248,1);
}

.c3:hover {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 16px;
  height: 16px;
  box-shadow: none;
}

.c3:hover::before {
  border-color: rgba(26,122,248,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
    className="c0"
  >
    <div
      className="c1 c2 muya-slider-track"
      onClick={[Function]}
    >
      <div
        className="c3 muya-slider-start-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c3 muya-slider-end-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "left": "0%",
          }
        }
      />
      <div
        className="c4 muya-slider-mark-point"
        onClick={[Function]}
        style={
          Object {
            "left": "10%",
          }
        }
      />
      <div
        className="c5 muya-slider-range"
        style={
          Object {
            "left": "0%",
          }
        }
      />
    </div>
    <div
      className="c6"
    >
      <div
        className="c7 muya-slider-mark-label"
        onClick={[Function]}
        style={
          Object {
            "color": "red",
            "left": "10%",
          }
        }
      >
        <span
          className="c8"
        >
          1100
        </span>
      </div>
    </div>
  </div>,
  .c9 {
  color: rgba(102,102,102,1);
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  margin: 0;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  padding: 4px 0;
}

.c0:hover .c1 {
  background-color: rgba(242,242,242,1);
}

.c6 {
  position: absolute;
  cursor: pointer;
  border-radius: 999rem;
  background-color: rgba(26,122,248,1);
  z-index: 1;
  height: 100%;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  cursor: pointer;
  z-index: 2;
  height: 12px;
  width: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c5::before {
  content: '';
  display: block;
  box-sizing: border-box;
  height: 6px;
  width: 6px;
  border: 1px solid rgba(221,221,221,1);
  border-radius: 999rem;
  background-color: rgba(255,255,255,1);
}

.c4 {
  position: absolute;
  box-sizing: border-box;
  cursor: pointer;
  z-index: 2;
  height: 12px;
  width: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c4::before {
  content: '';
  display: block;
  box-sizing: border-box;
  height: 6px;
  width: 6px;
  border: 1px solid rgba(26,122,248,1);
  border-radius: 999rem;
  background-color: rgba(255,255,255,1);
}

.c7 {
  position: relative;
  width: 100%;
  margin-top: 8px;
  height: 20px;
}

.c8 {
  position: absolute;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  cursor: pointer;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
  top: 0;
}

.c3 {
  position: absolute;
  z-index: 3;
  box-sizing: content-box;
  cursor: pointer;
  background-color: rgba(255,255,255,1);
  width: 12px;
  height: 12px;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
}

.c3::before {
  content: '';
  height: 100%;
  width: 100%;
  display: block;
  box-sizing: border-box;
  border-radius: 50%;
  background-color: rgba(255,255,255,1);
  border: 1px solid rgba(26,122,248,1);
}

.c3:hover {
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  width: 16px;
  height: 16px;
  box-shadow: none;
}

.c3:hover::before {
  border-color: rgba(26,122,248,1);
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  background-color: rgba(242,242,242,1);
  border-radius: 999rem;
  width: 100%;
  height: 6px;
}

<div
    className="c0"
  >
    <div
      className="c1 c2 muya-slider-track"
      onClick={[Function]}
    >
      <div
        className="c3 muya-slider-start-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "blue",
            "left": "0%",
          }
        }
      />
      <div
        className="c3 muya-slider-end-circle"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "blue",
            "left": "20%",
          }
        }
      />
      <div
        className="c4 muya-slider-mark-point-include"
        onClick={[Function]}
        style={
          Object {
            "color": "blue",
            "left": "10%",
          }
        }
      />
      <div
        className="c5 muya-slider-mark-point"
        onClick={[Function]}
        style={
          Object {
            "color": "blue",
            "left": "30%",
          }
        }
      />
      <div
        className="c6 muya-slider-range"
        style={
          Object {
            "left": "0%",
            "width": "20%",
          }
        }
      />
    </div>
    <div
      className="c7"
    >
      <div
        className="c8 muya-slider-mark-label"
        onClick={[Function]}
        style={
          Object {
            "color": "red",
            "left": "10%",
          }
        }
      >
        <span
          className="c9"
        >
          1100
        </span>
      </div>
      <div
        className="c8 muya-slider-mark-label"
        onClick={[Function]}
        style={
          Object {
            "color": "red",
            "left": "30%",
          }
        }
      >
        <span
          className="c9"
        >
          1100
        </span>
      </div>
    </div>
  </div>,
]
`;
